2008-11-03  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-class-key): Use c-lang-const to retrieve value
	for c-symbol-key.
	(php-mode): Add underscore (_) to syntax table for
	font-lock-defaults.
	(php-font-lock-keywords-1, php-font-lock-keywords-2)
	(php-font-lock-keywords-3): Change references to \\s_ in regular
	expressions to just using \\sw.  Remove usage of "[^_$]?" and
	"[^_]?"  regular expression.

2008-10-27  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el: Removed items in the ChangeLog section.  A
	ChangeLog file is now included with the source package.  Convert
	tabs to spaces.  Add form feed characters between sections.
	Fix indentation levels.  Fix various typos and documentation
	string errors.  Make in-line comment style consistent.
	(php-default-face, font-lock-keyword-face)
	(font-lock-constant-face): Remove conditional bindings and XEmacs
	code that likely does nothing.
	
2008-10-23  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-imenu-generic-expression): Reverse order of
	expression, since Imenu displays it in reverse.
	(php-completion-table): Move next to php-complete-function.

2008-10-23  David House <dmhouse-@-gmail.com>

	* php-mode.el (php-font-lock-keywords-1)
	(php-font-lock-keywords-2): Fix regular expression for
	highlighting various keywords when they're at the beginning or end
	of the line.

2008-10-22  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-imenu-generic-expression)
	(php-beginning-of-defun-regexp): Fix regular expression that is
	failing to match identifiers in function definitions for Imenu and
	add-change-log commands.
	(php-keywords): Remove "private" since its handled like
	"protected" and "public", not as a generic keyword.
	(php-font-lock-keywords-1): The use of grouping in the regular
	expression for php-constants and php-keywords added on 2008-04-12
	requires referencing the group number to highlight, otherwrise the